Updated AACBB 2019 schedule

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
-                    <h2 class="section-heading text-center">Call For Papers</h2>
+                    <h2 class="section-heading text-center">Call For Participation</h2>
                     <h5>
                         This workshop focuses on architecture and design of hardware and software accelerators for computational biology and bioinformatics problems.
                         <br><br>Topics of interest cover the following:
@@ -114,7 +114,7 @@
                         <li>Software acceleration of computational biology and bioinformatics</li>
                     </ul>
 
-                    <h2>Submission Guidelines</h2>
+                    <!--<h2>Submission Guidelines</h2>
                     <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
                         <a href="https://easychair.org/conferences/?conf=aacbb2019">https://easychair.org/conferences/?conf=aacbb2019</a>
                     </h5>
@@ -136,6 +136,7 @@
                     </ul>
 
                     <h4>A tentative workshop schedule can be found <a href="#schedule">below</a></h4>
+                    -->
 
                 </div>
             </div>
@@ -182,102 +183,112 @@
                         <th></th>
                     </tr>
                     <tr>
-                        <td>8:35 - 8:40</td>
+                        <td>8:40 - 8:45</td>
                         <td>Opening Remarks</td>
                     </tr>
                     <tr>
-                        <td><strong>8:40 - 9:25</strong></td>
+                        <td><strong>8:45 - 9:45</strong></td>
                         <td><strong>Keynote 1: Onur Mutlu (ETH, CMU)</strong>
-                            <!--<br>
-                            (<i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
-                            (<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>)-->
+                            <br>
+                            <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
+                            <!--(<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>-->
                         </td>
 
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
                     <tr>
-                        <td>09:25 - 10:05</td>
-                        <td>Regular paper session: 2 papers</td>
-                    </tr>
-                    <!--<tr>
-                        <td>09:20 - 09:40</td>
-                        <td>Mohammed Alser+, Hasan Hassan*, Akash Kumar&, Onur Mutlu* and Can Alkan+ (+Bilkent Univ., *ETH Zurich, &TU Dresden)
+                        <td>09:45 - 10:05</td>
+                        <td>Jeremie Kim, Damla Senol, Hongyi Xin, Donghyuk Lee, Saugata Ghose, Mohammed Alser, Hasan Hassan, Oguz Ergin, Can Alkan and Onur Mutlu
                             <br>
-                                <i>Exploring Speed/Accuracy Trade-offs in Hardware Accelerated Pre-Alignment in Genome Analysis</i></a>&nbsp;
-                            &nbsp;&nbsp;(<a href="./slides/2018/MAGNET_AACBB_Vienna2018.pptx">slides</a>)
+                                <a href="https://arxiv.org/pdf/1708.04329.pdf" target="_blank"><i>GRIM-filter: fast seed filtering in read mapping using emerging memory technologies</i></a>&nbsp;
+                            <!--&nbsp;&nbsp;(<a href="https://arxiv.org/pdf/1708.04329.pdf">slides</a>)-->
                         </td>
                     </tr>
                     <tr>
-                        <td>09:20 - 09:40</td>
-                        <td>Lisa Wu, Frank Nothaft, Brendan Sweeney, David Bruns-Smith, Sagar Karandikar, Johnny Le, Howard Mao, Krste Asanovic, David Patterson and Anthony Joseph (UC Berkeley)
-                            <br><i>Accelerating Duplicate Marking In The Cloud</i></td>
-                    </tr>-->
+                        <td>10:05 - 10:25</td>
+                        <td>Damla Senol Cali, Jeremie S. Kim, Saugata Ghose, Can Alkan and Onur Mutlu
+                            <br><a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bby017/4958758?redirectedFrom=fulltext" target="_blank"><i>Nanopore Sequencing Technology and Tools for Genome Assembly: Computational Analysis of the Current State, Bottlenecks and Future Directions</i></a></td>
+                    </tr>
 
                     <tr><td><br></td><td><br></td></tr>
                     <tr>
-                        <td>10:05 - 10:30</td>
+                        <td>10:25 - 11:00</td>
                         <td>Coffee break</td>
                     <tr><td><br></td><td><br></td></tr>
 
-                        <td><strong>10:30 - 11:15</strong></td>
+                        <td><strong>11:00 - 11:55</strong></td>
                         <td><strong>Invited Talk: Ananth Kalyanaraman (WSU)</strong>
                             <!--<br><i>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</i></strong>-->
                             </td>
                     </tr>
+                    <tr><td><br></td><td><br></td></tr>
+
 
                     <!-- Paper session 2 (3 regular papers) -->
-                    <!--<tr>
-                        <td>11:10 - 11:30</td>
-                        <td>Wenqin Huangfu+, Zhenhua Zhu*, Tianqi Tang+, Xing Hu+, Yu Wang* and Yuan Xie+ (+UCSB, *Tsinghua University)
-                            <br><i>GAME: GPU Acceleration of Metagenomics Clustering</i></td>
+                    <tr>
+                        <td>11:55 - 12:15</td>
+                        <td>Xueqi Li (UCSB, KITS)
+                            <br><i>Scalable In-Memory System for Genomic Analysis</i></td>
 
                     </tr>
                     <tr>
-                        <td>11:30 - 11:50</td>
-                        <td>Paper 4</td>
-                        <td>Jose M. Herruzo+, Sonia Gonzalez-Navarro+, Pablo Ibañez*, Victor Viñals*, Jesus Alastruey* and Oscar Plata+ (+Univ. of Malaga, *Univ. of Zaragoza)
-                            <br><i>Exact Alignment with FM-index on the Intel Xeon Phi Knights Landing Processor</i></td>
-                    </tr>-->
-                    <tr>
+                        <td>12:15 - 12:35</td>
+                        <td>Meysam Roodi, Zahra Lak and Andreas Moshovos (Univ. of Toronto)
+                            <br><i>Accelerating GATK Variant Calling HaplotypeCaller Tool</i></td>
+                    </tr>
+                    <!--<tr>
                         <td>11:15 - 11:35</td>
                         <td>Regular paper session: 1 papers</td>
-                    </tr>
-                    <tr>
-                        <td>11:35 - 12:00</td>
-                        <td>lightning round session: 2min presentation for each poster</td>
-                    </tr>
+                    </tr>-->
 
                     <tr><td><br></td><td><br></td></tr>
                     <tr>
-                        <td>11:55 - 13:30</td>
-                        <td>Lunch and poster session 1</td>
+                        <td>12:35 - 14:00</td>
+                        <td>Lunch</td>
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
 
                     <tr>
-                        <td><strong>13:30 - 14:20</strong></td>
+                        <td><strong>14:00 - 15:00</strong></td>
                         <td><strong>Keynote 2: William Dally (Stanford & NVIDIA)</strong></td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
 
                     <tr>
-                        <td>14:20 - 15:00</td>
-                        <td>Regular paper session: 2 papers</td>
+                        <td>15:00 - 15:20</td>
+                        <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
+                            <br><i>IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback</i></td>
                     </tr>
-
-
                     <tr>
-                        <td>15:00 - 15:50</td>
-                        <td>Poster session 2 and coffee break</td>
+                        <td>15:20 - 15:40</td>
+                        <td>Roman Kaplan, Leonid Yavits and Ran Ginsar (Technion, Israel Institute of Technology)
+                            <br><a href="https://arxiv.org/ftp/arxiv/papers/1809/1809.01127.pdf" target="_blank"><i>RASSA: Resistive Pre-Alignment Accelerator for Approximate DNA Long Read Mapping</i></a></td>
                     </tr>
 
+
+                    <tr><td><br></td><td><br></td></tr>
+                    <tr>
+                        <td>15:40 - 16:00</td>
+                        <td>Coffee break</td>
+                    </tr>
                     <tr><td><br></td><td><br></td></tr>
 
 
                     <tr>
-                        <td>15:50 - 16:50</td>
-                        <td>Regular paper session: 3 papers</td>
+                        <td>16:00 - 16:20</td>
+                        <td>Wenqin Huangfu, Shuangchen Li, Xing Hu and Yuan Xie (UCSB)
+                            <br><a href="https://seal.ece.ucsb.edu/sites/seal.ece.ucsb.edu/files/publications/a59-huangfu.pdf" target="_blank"><i>RADAR: A 3D-ReRAM based DNA Alignment Accelerator Architecture</i></a></td>
+                    </tr>
+                    <tr>
+                        <td>16:20 - 16:40</td>
+                        <td>Zheming Jin and Hal Finkel (ANL)
+                            <br><i>Exploring the Random Network of Hodgkin and Huxley Neurons with Exponential Synaptic Conductances on OpenCL FPGA Platform</i></td>
+                    </tr>
+                    <tr>
+                        <td>16:20 - 16:40</td>
+                        <td>Meysam Roodi, Zahra Lak and Andreas Moshovos (Univ. of Toronto)
+                            <br><i>Improving BWA-MEM performance</i></td>
                     </tr>
                     <tr>
                         <td>16:50 - 17:00</td>
@@ -396,7 +407,7 @@
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH Zurich / CMU </a></h4>
                                 <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
-                                <h5 class="subheading">8:40 - 9:25</h5>
+                                <h5 class="subheading">8:45 - 9:45</h5>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
@@ -433,7 +444,7 @@
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William Dally, Stanford & NVIDIA</a></h4>
                                 <h3 class="keynote-subheading">Talk title: TBD</h3>
-                                <h5 class="subheading">13:30-14:20</h5>
+                                <h5 class="subheading">14:00-15:00</h5>
                             </div>
                             <div class="timeline-body">
                                 <!--<p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
@@ -461,7 +472,7 @@
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://www.eecs.wsu.edu/~ananth/">Ananth Kalyanaraman, Washington State University</a></h4>
                                 <h3 class="keynote-subheading">Talk title: TBD</h3>
-                                <h5 class="subheading">10:30-11:15</h5>
+                                <h5 class="subheading">11:00-11:55</h5>
                             </div>
                             <div class="timeline-body">
                                 <!--<p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
