Updated schedule: Bill & Sahand <-> Onur & Jeremie

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </tr>
                     <tr>
                         <td><strong>8:45 - 9:45</strong></td>
-                        <td><strong>Keynote 1: Onur Mutlu (ETH, CMU)</strong>
+                        <td><strong>Keynote 1: William Dally (Stanford & NVIDIA)</strong>
                             <br>
                             <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
                             <!--(<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>-->
@@ -174,13 +174,12 @@
 
                     </tr>
                     <!-- Paper session 1 (2 regular papers) -->
+                    <tr><td><br></td><td><br></td></tr>
+
                     <tr>
                         <td>09:45 - 10:05</td>
-                        <td>Jeremie Kim, Damla Senol, Hongyi Xin, Donghyuk Lee, Saugata Ghose, Mohammed Alser, Hasan Hassan, Oguz Ergin, Can Alkan and Onur Mutlu
-                            <br>
-                                <a href="https://arxiv.org/pdf/1708.04329.pdf" target="_blank"><i>GRIM-filter: fast seed filtering in read mapping using emerging memory technologies</i></a>&nbsp;
-                            <!--&nbsp;&nbsp;(<a href="https://arxiv.org/pdf/1708.04329.pdf">slides</a>)-->
-                        </td>
+                        <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
+                            <br><i>IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback</i></td>
                     </tr>
                     <tr>
                         <td>10:05 - 10:25</td>
@@ -228,15 +227,18 @@
 
                     <tr>
                         <td><strong>14:00 - 15:00</strong></td>
-                        <td><strong>Keynote 2: William Dally (Stanford & NVIDIA)</strong></td>
+                        <td><strong>Keynote 2: Onur Mutlu (ETH, CMU)</strong></td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
 
                     <tr>
                         <td>15:00 - 15:20</td>
-                        <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
-                            <br><i>IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback</i></td>
+                        <td>Jeremie Kim, Damla Senol, Hongyi Xin, Donghyuk Lee, Saugata Ghose, Mohammed Alser, Hasan Hassan, Oguz Ergin, Can Alkan and Onur Mutlu
+                            <br>
+                            <a href="https://arxiv.org/pdf/1708.04329.pdf" target="_blank"><i>GRIM-filter: fast seed filtering in read mapping using emerging memory technologies</i></a>&nbsp;
+                            <!--&nbsp;&nbsp;(<a href="https://arxiv.org/pdf/1708.04329.pdf">slides</a>)-->
+                        </td>
                     </tr>
                     <tr>
                         <td>15:20 - 15:40</td>
