Corrected tentative schedule

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <td><strong>8:45 - 9:45</strong></td>
                         <td><strong>Keynote 1: William Dally (Stanford & NVIDIA)</strong>
                             <br>
-                            <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
+                            <i>TBA</i></strong>&nbsp;
                             <!--(<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>-->
                         </td>
 
@@ -228,6 +228,7 @@
                     <tr>
                         <td><strong>14:00 - 15:00</strong></td>
                         <td><strong>Keynote 2: Onur Mutlu (ETH, CMU)</strong></td>
+                        <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
@@ -275,100 +276,7 @@
                         <td>Closing remarks</td>
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
-                    <!-- Paper session 3 (3 regular papers) -->
-                    <!--<tr>
-                        <td>14:10 - 14:30</td>
-                        <td>Tommy Tracy Ii, Jack Wadden, Kevin Skadron and Mircea Stan (UVA)
-                            <br><i>Streaming Gap-Aware Seed Alignment on the Cache Automaton</i></td>
-                    </tr>
-                    <tr>
-                        <td>14:30 - 14:50</td>
-                        <td>Roman Kaplan, Leonid Yavits and Ran Ginosar (Technion)
-                            <br><i>Processing-in-Storage Architecture for Large-Scale Biological Sequence Alignment</i></td>
-                    </tr>
-                    <tr>
-                        <td>14:50 - 15:10</td>
-                        <td>Xueqi Li, Guangming Tan, Yuanrong Wang and Ninghui Sun (ICT)
-                            <br><i>The Genomic Benchmark Suite: Characterization and Architecture Implications</i></td>
-                    </tr>-->
 
-                    <!--<tr><td><br></td><td><br></td></tr>
-                    <tr>
-                        <td>15:10 - 15:30</td>
-                        <td>Coffee break</td>
-                    </tr>
-                    <tr><td><br></td><td><br></td></tr>
-                    -->
-
-                    <!--<tr>
-                        <td>15:30 - 16:10</td>
-                        <td><strong>Invited Talk: Can Alkan (Bilkent University)
-                            <br><i>"Addressing Computational Burden to Realize Precision Medicine"</i></strong>&nbsp;
-                            (<a target="_blank" href="./slides/2018/alkan-aacbb.pptx">slides</a>)
-                        </td>
-                    </tr>-->
-
-                    <!-- Paper session 4 (2 regular papers) -->
-                    <!--<tr>
-                        <td>16:10 - 16:30</td>
-                        <td>Sergiu Mosanu and Mircea Stan (UVA)
-                            <br><i>Burrows-Wheeler Short Read Aligner on AWS EC2 F1</i>&nbsp;
-                            (<a target="_blank" href="./slides/2018/aacbb-serg-presi.pdf">slides</a>)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>16:30 - 16:50</td>
-                        <td>Angélica Alejandra Serrano-Rubio, Amilcar Meneses-Viveros, Guillermo B. Morales-Luna and Mireya Paredes-López (CINVESTAV-IPN)
-                            <br><i>Towards BIMAX: Binary Inclusion-MAXimal parallel implementation for gene expression analysis</i></td>
-                    </tr>
-
-
-                    <tr><td><br></td><td><br></td></tr>
-                    <tr>
-                        <td>16:50 - 17:00</td>
-                        <td>Short break</td>
-                    </tr>
-                    <tr><td><br></td><td><br></td></tr>-->
-
-                    <!-- Paper session 3 (3 regular papers) -->
-                    <!--<tr>
-                        <td>17:00 - 17:15</td>
-                        <td>Meysam Taassori+, Anirban Nag+, Keeton Hodgson+, Ali Shafiee* and Rajeev Balasubramonian+ (+Univ. of Utah, *Samsung Electronics)
-                            <br><i>Memory: The Dominant Bottleneck in Genomic Workloads</i>&nbsp;
-                            (<a target="_blank" href="./slides/2018/HPCA_2018_Genomics_An2_mychange.pdf">slides</a>)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>17:15 - 17:30</td>
-                        <td>Meysam Roodi and Andreas Moshovos (Univ. of Toronto)
-                            <br><i>Gene Sequencing: Where Time Goes</i></td>
-                    </tr>
-                    <tr>
-                        <td>17:30 - 17:45</td>
-                        <td>Calvin Bulla, Lluc Alvarez and Miquel Moreto (BSC)
-                            <br><i>Are Next-Generation HPC Systems Ready for Population-level Genomics Data Analytics?</i>&nbsp;
-                            (<a target="_blank" href="./slides/2018/20180224-aacbb-mmoreto.pdf">slides</a>)
-                        </td>
-                    </tr>
-
-                    <tr><td><br></td><td><br></td></tr>
-                    <tr>
-                        <td>17:45 - 17:50</td>
-                        <td>Closing remarks</td>
-                    </tr>
-                    <tr><td><br></td><td><br></td></tr>
-
-                    <tr>
-                        <td></td>
-                        <td>
-                            <h4>Social Event</h4>
-                        </td>
-                    </tr>-->
-
-                    <!--<tr>
-                        <td><strong>18:15</strong></td>
-                        <td>Bus leaves to social event (Heurigen)</td>
-                    </tr>-->
 
                 </table>
             </div>
@@ -381,13 +289,34 @@
 
                     <li class="timeline-inverted">
                         <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" src="img/speakers/2019/william-dally_profilephoto.jpg" alt="">
+                        </div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William Dally, Stanford & NVIDIA</a></h4>
+                                <h3 class="keynote-subheading">Talk title: TBA</h3>
+                                <h5 class="subheading">8:45-9:45</h5>
+                            </div>
+                            <div class="timeline-body">
+                                <!--<p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
+                                    This talk will introduce the Micron Automata Processor (AP), a novel computing architecture that enables massively parallel execution of numerous non-deterministic finite automata.
+                                    The processor inspires a new programming paradigm of solving problems using complex pattern matching engines executed over streaming data.
+                                    The first part of this talk will focus on the processor characteristics, programming and execution environment, and design principles we discovered that are of value in developing applications on the AP.
+                                    The second part will feature my group's research on developing bioinformatics algorithms for the AP including database search and motif detection.
+                                </p>-->
+                            </div>
+                        </div>
+                    </li>
+
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
                             <img class="rounded-circle img-fluid" src="img/speakers/omutlu.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH Zurich / CMU </a></h4>
                                 <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
-                                <h5 class="subheading">8:45 - 9:45</h5>
+                                <h5 class="subheading">14:00 - 15:00</h5>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
@@ -415,27 +344,6 @@
                             </div>
                         </div>
                     </li>
-
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/speakers/2019/william-dally_profilephoto.jpg" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
-                                <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William Dally, Stanford & NVIDIA</a></h4>
-                                <h3 class="keynote-subheading">Talk title: TBD</h3>
-                                <h5 class="subheading">14:00-15:00</h5>
-                            </div>
-                            <div class="timeline-body">
-                                <!--<p class="text-muted padding-bottom-15"><strong>Talk abstract: </strong>
-                                    This talk will introduce the Micron Automata Processor (AP), a novel computing architecture that enables massively parallel execution of numerous non-deterministic finite automata.
-                                    The processor inspires a new programming paradigm of solving problems using complex pattern matching engines executed over streaming data.
-                                    The first part of this talk will focus on the processor characteristics, programming and execution environment, and design principles we discovered that are of value in developing applications on the AP.
-                                    The second part will feature my group's research on developing bioinformatics algorithms for the AP including database search and motif detection.
-                                </p>-->
-                            </div>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -451,7 +359,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://www.eecs.wsu.edu/~ananth/">Ananth Kalyanaraman, Washington State University</a></h4>
-                                <h3 class="keynote-subheading">Talk title: TBD</h3>
+                                <h3 class="keynote-subheading">Talk title: TBA</h3>
                                 <h5 class="subheading">11:00-11:55</h5>
                             </div>
                             <div class="timeline-body">
