--- a/index.html
+++ b/index.html
@@ -179,12 +179,13 @@
                     <tr>
                         <td>09:45 - 10:05</td>
                         <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
-                            <br><i>IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback</i></td>
+                            <br><i>"IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback"</i></td>
                     </tr>
                     <tr>
                         <td>10:05 - 10:25</td>
                         <td>Damla Senol Cali, Jeremie S. Kim, Saugata Ghose, Can Alkan and Onur Mutlu
-                            <br><a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bby017/4958758?redirectedFrom=fulltext" target="_blank"><i>Nanopore Sequencing Technology and Tools for Genome Assembly: Computational Analysis of the Current State, Bottlenecks and Future Directions</i></a></td>
+                            <br><a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bby017/4958758?redirectedFrom=fulltext" target="_blank">
+                                <i>"Nanopore Sequencing Technology and Tools for Genome Assembly: Computational Analysis of the Current State, Bottlenecks and Future Directions"</i></a></td>
                     </tr>
 
                     <tr><td><br></td><td><br></td></tr>
@@ -195,6 +196,7 @@
 
                         <td><strong>11:00 - 11:55</strong></td>
                         <td><strong>Invited Talk: Ananth Kalyanaraman (WSU)</strong>
+                            <br><i>TBA</i></strong>&nbsp;
                             <!--<br><i>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</i></strong>-->
                             </td>
                     </tr>
@@ -205,13 +207,13 @@
                     <tr>
                         <td>11:55 - 12:15</td>
                         <td>Xueqi Li (UCSB, KITS)
-                            <br><i>Scalable In-Memory System for Genomic Analysis</i></td>
+                            <br><i>"Scalable In-Memory System for Genomic Analysis"</i></td>
 
                     </tr>
                     <tr>
                         <td>12:15 - 12:35</td>
                         <td>Meysam Roodi, Zahra Lak and Andreas Moshovos (Univ. of Toronto)
-                            <br><i>Accelerating GATK Variant Calling HaplotypeCaller Tool</i></td>
+                            <br><i>"Accelerating GATK Variant Calling HaplotypeCaller Tool"</i></td>
                     </tr>
                     <!--<tr>
                         <td>11:15 - 11:35</td>
@@ -227,8 +229,8 @@
 
                     <tr>
                         <td><strong>14:00 - 15:00</strong></td>
-                        <td><strong>Keynote 2: Onur Mutlu (ETH, CMU)</strong></td>
-                        <i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
+                        <td><strong>Keynote 2: Onur Mutlu (ETH, CMU)</strong>
+                            <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;</td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
@@ -237,14 +239,14 @@
                         <td>15:00 - 15:20</td>
                         <td>Jeremie Kim, Damla Senol, Hongyi Xin, Donghyuk Lee, Saugata Ghose, Mohammed Alser, Hasan Hassan, Oguz Ergin, Can Alkan and Onur Mutlu
                             <br>
-                            <a href="https://arxiv.org/pdf/1708.04329.pdf" target="_blank"><i>GRIM-filter: fast seed filtering in read mapping using emerging memory technologies</i></a>&nbsp;
+                            <a href="https://arxiv.org/pdf/1708.04329.pdf" target="_blank"><i>"GRIM-filter: fast seed filtering in read mapping using emerging memory technologies"</i></a>&nbsp;
                             <!--&nbsp;&nbsp;(<a href="https://arxiv.org/pdf/1708.04329.pdf">slides</a>)-->
                         </td>
                     </tr>
                     <tr>
                         <td>15:20 - 15:40</td>
                         <td>Roman Kaplan, Leonid Yavits and Ran Ginsar (Technion, Israel Institute of Technology)
-                            <br><a href="https://arxiv.org/ftp/arxiv/papers/1809/1809.01127.pdf" target="_blank"><i>RASSA: Resistive Pre-Alignment Accelerator for Approximate DNA Long Read Mapping</i></a></td>
+                            <br><a href="https://arxiv.org/ftp/arxiv/papers/1809/1809.01127.pdf" target="_blank"><i>"RASSA: Resistive Pre-Alignment Accelerator for Approximate DNA Long Read Mapping"</i></a></td>
                     </tr>
 
 
@@ -259,17 +261,17 @@
                     <tr>
                         <td>16:00 - 16:20</td>
                         <td>Wenqin Huangfu, Shuangchen Li, Xing Hu and Yuan Xie (UCSB)
-                            <br><a href="https://seal.ece.ucsb.edu/sites/seal.ece.ucsb.edu/files/publications/a59-huangfu.pdf" target="_blank"><i>RADAR: A 3D-ReRAM based DNA Alignment Accelerator Architecture</i></a></td>
+                            <br><a href="https://seal.ece.ucsb.edu/sites/seal.ece.ucsb.edu/files/publications/a59-huangfu.pdf" target="_blank"><i>"RADAR: A 3D-ReRAM based DNA Alignment Accelerator Architecture"</i></a></td>
                     </tr>
                     <tr>
                         <td>16:20 - 16:40</td>
                         <td>Zheming Jin and Hal Finkel (ANL)
-                            <br><i>Exploring the Random Network of Hodgkin and Huxley Neurons with Exponential Synaptic Conductances on OpenCL FPGA Platform</i></td>
+                            <br><i>"Exploring the Random Network of Hodgkin and Huxley Neurons with Exponential Synaptic Conductances on OpenCL FPGA Platform"</i></td>
                     </tr>
                     <tr>
                         <td>16:20 - 16:40</td>
                         <td>Meysam Roodi, Zahra Lak and Andreas Moshovos (Univ. of Toronto)
-                            <br><i>Improving BWA-MEM performance</i></td>
+                            <br><i>"Improving BWA-MEM performance"</i></td>
                     </tr>
                     <tr>
                         <td>16:50 - 17:00</td>
