--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <tr><td><br></td><td><br></td></tr>
                     <tr>
                         <td><strong>8:20 - 9:20</strong></td>
-                        <td><strong>Keynote 1: William Dally (Stanford & NVIDIA)</strong>
+                        <td><strong>Keynote 1: William (Bill) Dally, Stanford & NVIDIA</strong>
                             <br>
                             <i>TBA</i></strong>&nbsp;
                             <!--(<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>-->
@@ -197,7 +197,7 @@
                     <tr><td><br></td><td><br></td></tr>
 
                         <td><strong>10:30 - 11:20</strong></td>
-                        <td><strong>Invited Talk: Ananth Kalyanaraman (WSU)</strong>
+                        <td><strong>Invited Talk: Ananth Kalyanaraman, WSU</strong>
                             <br><i>TBA</i></strong>&nbsp;
                             <!--<br><i>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</i></strong>-->
                             </td>
@@ -231,7 +231,7 @@
 
                     <tr>
                         <td><strong>13:30 - 14:30</strong></td>
-                        <td><strong>Keynote 2: Onur Mutlu (ETH, CMU)</strong>
+                        <td><strong>Keynote 2: Onur Mutlu, ETH & CMU</strong>
                             <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;</td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
@@ -297,7 +297,7 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William Dally, Stanford & NVIDIA</a></h4>
+                                <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William (Bill) Dally, Stanford & NVIDIA</a></h4>
                                 <h3 class="keynote-subheading">Talk title: TBA</h3>
                                 <h5 class="subheading">8:20-9:20</h5>
                             </div>
