--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <td><strong>8:20 - 9:20</strong></td>
                         <td><strong>Keynote 1: William (Bill) Dally, Stanford & NVIDIA</strong>
                             <br>
-                            <i>TBA</i></strong>&nbsp;
+                            <i>"Hardware Enabled Biology"</i></strong>&nbsp;
                             <!--(<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>-->
                         </td>
 
@@ -298,7 +298,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William (Bill) Dally, Stanford & NVIDIA</a></h4>
-                                <h3 class="keynote-subheading">Talk title: TBA</h3>
+                                <h3 class="keynote-subheading">"Hardware Enabled Biology"</h3>
                                 <h5 class="subheading">8:20-9:20</h5>
                             </div>
                             <div class="timeline-body">
