Updated Ananth's title

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                         <td><strong>10:30 - 11:20</strong></td>
                         <td><strong>Invited Talk: Ananth Kalyanaraman, WSU</strong>
-                            <br><i>TBA</i></strong>&nbsp;
+                            <br><i>"Scaling Graph Applications in Computational Biology"</i></strong>&nbsp;
                             <!--<br><i>“Next-Generation Sequencing: Big Data meets High Performance Computing Architectures”</i></strong>-->
                             </td>
                     </tr>
@@ -363,7 +363,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://www.eecs.wsu.edu/~ananth/">Ananth Kalyanaraman, Washington State University</a></h4>
-                                <h3 class="keynote-subheading">Talk title: TBA</h3>
+                                <h3 class="keynote-subheading">"Scaling Graph Applications in Computational Biology"</h3>
                                 <h5 class="subheading">10:30-11:20</h5>
                             </div>
                             <div class="timeline-body">
