Updated Sahand's paper link

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                     <tr>
                         <td>9:20 - 9:40</td>
                         <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
-                            <br><i>"IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback"</i></td>
+                            <br><a href="https://arxiv.org/abs/1902.03238" target="_blank">
+                                <i>"IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback"</i></a></td>
                     </tr>
                     <tr>
                         <td>9:40 - 10:00</td>
