--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link js-scroll-trigger" href="#organizers">Organizers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="AACBB-2018.html" target="_blank">1<sup>st</sup> AACBB</a>
+              <a class="nav-link" href="AACBB-2018.html" target="_blank">AACBB'18</a>
             </li>
 
           </ul>
@@ -171,6 +171,7 @@
                         <td><strong>Keynote 1: William (Bill) Dally, Stanford & NVIDIA</strong>
                             <br>
                             <i>"Hardware Enabled Biology"</i></strong>&nbsp;
+                            (<a target="_blank" href="./slides/2019/HE_Biology_0219_A.pdf">slides</a>)
                             <!--(<a href="./slides/2018/onur-AcceleratingGenomeAnalysis-AACBB_Keynote-February-24-2018-FINAL.pptx">slides</a>-->
                         </td>
 
@@ -182,7 +183,9 @@
                         <td>9:20 - 9:40</td>
                         <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
                             <br><a href="https://arxiv.org/abs/1902.03238" target="_blank">
-                                <i>"IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback"</i></a></td>
+                                <i>"IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback"</i></a>
+                            (<a target="_blank" href="./slides/2019/impact-aacbb19-2019_02_16.pptx">slides</a>)
+                        </td>
                     </tr>
                     <tr>
                         <td>9:40 - 10:00</td>
@@ -233,7 +236,9 @@
                     <tr>
                         <td><strong>13:30 - 14:30</strong></td>
                         <td><strong>Keynote 2: Onur Mutlu, ETH & CMU</strong>
-                            <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;</td>
+                            <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
+                            (<a target="_blank" href="./slides/2019/onur-AcceleratingGenomeAnalysis-AACBB-Keynote-Feb-16-2019-FINAL.pptx">slides</a>)
+                        </td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
                     <tr><td><br></td><td><br></td></tr>
@@ -249,7 +254,10 @@
                     <tr>
                         <td>14:50 - 15:10</td>
                         <td>Roman Kaplan, Leonid Yavits and Ran Ginsar (Technion, Israel Institute of Technology)
-                            <br><a href="https://arxiv.org/ftp/arxiv/papers/1809/1809.01127.pdf" target="_blank"><i>"RASSA: Resistive Pre-Alignment Accelerator for Approximate DNA Long Read Mapping"</i></a></td>
+                            <br><a href="https://arxiv.org/ftp/arxiv/papers/1809/1809.01127.pdf" target="_blank"><i>"RASSA: Resistive Pre-Alignment Accelerator for Approximate DNA Long Read Mapping"</i></a>
+                            (<a target="_blank" href="./slides/2019/RASSA%20-%20AACBB%20presentation.pptx">slides</a>)
+
+                        </td>
                     </tr>
 
 
@@ -299,7 +307,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://profiles.stanford.edu/william-dally">William (Bill) Dally, Stanford & NVIDIA</a></h4>
-                                <h3 class="keynote-subheading">"Hardware Enabled Biology"</h3>
+                                <h3 class="keynote-subheading">"Hardware Enabled Biology"&nbsp;(<a target="_blank" href="./slides/2019/HE_Biology_0219_A.pdf">Slides</a>)</h3>
                                 <h5 class="subheading">8:20-9:20</h5>
                             </div>
                             <div class="timeline-body">
@@ -320,7 +328,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4><a target="_blank" href="https://people.inf.ethz.ch/omutlu/">Onur Mutlu, ETH Zurich / CMU </a></h4>
-                                <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</h3>
+                                <h3 class="keynote-subheading">“Accelerating Genome Analysis: A Primer on an Ongoing Journey”&nbsp;(<a target="_blank" href="./slides/2019/onur-AcceleratingGenomeAnalysis-AACBB-Keynote-Feb-16-2019-FINAL.pptx">Slides</a>)</h3>
                                 <h5 class="subheading">13:30 - 14:30</h5>
                             </div>
                             <div class="timeline-body">
