Uploaded Damla's slides

--- a/index.html
+++ b/index.html
@@ -184,14 +184,16 @@
                         <td>Sahand Kashani, Stuart Byma and James Larus (EPFL)
                             <br><a href="https://arxiv.org/abs/1902.03238" target="_blank">
                                 <i>"IMPACT: Interval-based Multi-pass Proteomic Alignment with Constant Traceback"</i></a>
-                            (<a target="_blank" href="./slides/2019/impact-aacbb19-2019_02_16.pptx">slides</a>)
+                            &nbsp;(<a target="_blank" href="./slides/2019/impact-aacbb19-2019_02_16.pptx">slides</a>)
                         </td>
                     </tr>
                     <tr>
                         <td>9:40 - 10:00</td>
                         <td>Damla Senol Cali, Jeremie S. Kim, Saugata Ghose, Can Alkan and Onur Mutlu
                             <br><a href="https://academic.oup.com/bib/advance-article-abstract/doi/10.1093/bib/bby017/4958758?redirectedFrom=fulltext" target="_blank">
-                                <i>"Nanopore Sequencing Technology and Tools for Genome Assembly: Computational Analysis of the Current State, Bottlenecks and Future Directions"</i></a></td>
+                                <i>"Nanopore Sequencing Technology and Tools for Genome Assembly: Computational Analysis of the Current State, Bottlenecks and Future Directions"</i></a>
+                            &nbsp;(<a target="_blank" href="./slides/2019/HPCA_AACBB_2019_Nanopore_talk.pdf">slides</a>)
+                        </td>
                     </tr>
 
                     <tr><td><br></td><td><br></td></tr>
