Added links to Onur's and Roman's videos

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <td><strong>13:30 - 14:30</strong></td>
                         <td><strong>Keynote 2: Onur Mutlu, ETH & CMU</strong>
                             <br><i>“Accelerating Genome Analysis: A Primer on an Ongoing Journey”</i></strong>&nbsp;
-                            (<a target="_blank" href="./slides/2019/onur-AcceleratingGenomeAnalysis-AACBB-Keynote-Feb-16-2019-FINAL.pptx">slides</a>)
+                            (<a target="_blank" href="./slides/2019/onur-AcceleratingGenomeAnalysis-AACBB-Keynote-Feb-16-2019-FINAL.pptx">slides</a>, <a target="_blank" href="https://www.youtube.com/watch?v=hPnSmfwu2-A&t=814s">video</a>)
                         </td>
                             <!--<br><i>“Automata Processor and its Applications in Bioinformatics”</i></strong></td>-->
                     </tr>
@@ -257,7 +257,7 @@
                         <td>14:50 - 15:10</td>
                         <td>Roman Kaplan, Leonid Yavits and Ran Ginsar (Technion, Israel Institute of Technology)
                             <br><a href="https://arxiv.org/ftp/arxiv/papers/1809/1809.01127.pdf" target="_blank"><i>"RASSA: Resistive Pre-Alignment Accelerator for Approximate DNA Long Read Mapping"</i></a>
-                            (<a target="_blank" href="./slides/2019/RASSA%20-%20AACBB%20presentation.pptx">slides</a>)
+                            (<a target="_blank" href="./slides/2019/RASSA%20-%20AACBB%20presentation.pptx">slides</a>, <a target="_blank" href="https://www.youtube.com/watch?v=cEr2nU5YLAQ">video</a>)
 
                         </td>
                     </tr>
