--- a/AACBB-2019.html
+++ b/AACBB-2019.html
@@ -71,8 +71,8 @@
                 <div class="intro-heading">Accelerator Architecture in <br> Computational Biology and Bioinformatics</div>
 
             </div>
-            <h3 class="heading-subtitle">February 23rd, 2020</h3>
-            <h3 class="heading-subtitle">San Diego, CA, USA</h3>
+            <h3 class="heading-subtitle">February 16th, 2019</h3>
+            <h3 class="heading-subtitle">Washington D.C., USA</h3>
         </div>
     </header>
 
