--- a/index.html
+++ b/index.html
@@ -246,6 +246,13 @@
         </div>
 		
 		<div class="row">
+          <div class="col-lg-12 text-center">
+            <h3 class="padding-bottom-15 text-muted">From Stanford</h3>
+          </div>
+        </div>
+		
+		
+		<div class="row">
             <!--<div class="col-sm-1"></div>-->
           <div class="col-sm-6">
             <div class="team-member">
