--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     </ul>
 
                     <h2>Submission Guidelines</h2>
-                    <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through EasyChair:
-                        <a href="https://easychair.org/conferences/?conf=aacbb2020">https://easychair.org/conferences/?conf=aacbb2020</a>
+                    <h5 class="padding-bottom-10">Interested authors are encouraged to submit papers (2-5 pages) through 
+                        <a href="https://easychair.org/conferences/?conf=aacbb2020">EasyChair</a>
                     </h5>
                     <!-- <h6>For a PDF version of the CFP click here: <a href="CFP/Workshop%20on%20AACBB%20-%202019%20-%20extended%20CFP.pdf" target="_blank">Download CFP</a></h6>
                     <p>All papers will be evaluated based on their relation to the subject, novelty, fundamental insights, experimental evaluation, and potential for long-term impact.</p> -->
@@ -262,7 +262,7 @@
                 <p class="text-left"><strong>Short bio:</strong> Yatish is a final year PhD student in Electrical Engineering at Stanford University, where he is co-advised by Prof. Bill Dally and Prof. Gill Bejerano.
 				He is interested in the hardware-acceleration of genome sequence alignment and its application to biomedicine and comparative genomics. 
 				His work has won the best paper award at ASPLOS 2018 and IEEE Micro Top picks 2018 award. He is also a recipient of the NVIDIA graduate fellowship. 
-				He has served as areviewer in a number of top-tier computer architecture journals, including Transactions on Computers, Transactions on Architecture and Code Optimization (TACO) and ComputerArchitecture Letters (CAL)</p>
+				He has served as a reviewer in a number of top-tier computer architecture journals, including Transactions on Computers, Transactions on Architecture and Code Optimization (TACO) and ComputerArchitecture Letters (CAL)</p>
             </div>
           </div>
             <!--<div class="col-sm-2"></div>-->
